unpackaged/main/default/objects/Asset/fields/Asset_Has_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Asset_Has_Work_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Has Work Orders</label>
    <type>Checkbox</type>
</CustomField>