unpackaged/main/default/objects/Asset/fields/Calibration_Maintenance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Maintenance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calibration Maintenance Plan</label>
    <referenceTo>MaintenancePlan</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>