unpackaged/main/default/objects/Asset/fields/Calibration_Maintenance_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Maintenance_Plan_Name__c</fullName>
    <formula>Calibration_Maintenance_Plan__r.MaintenancePlanTitle</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calibration Maintenance Plan Name</label>
    <type>Text</type>
</CustomField>