unpackaged/main/default/objects/Asset/fields/Count_of_Category_High_Controller__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Category_High_Controller__c</fullName>
    <label>Count of Category High Controller</label>
    <summaryFilterItems>
        <field>ESG_Data__c.High_Low__c</field>
        <operation>equals</operation>
        <value>High Controller</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>