unpackaged/main/default/objects/Asset/fields/Count_of_Intermittent_Bleed_Controller__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Intermittent_Bleed_Controller__c</fullName>
    <label>Count of Intermittent Bleed Controller</label>
    <summaryFilterItems>
        <field>ESG_Data__c.Bleed_Frequency__c</field>
        <operation>equals</operation>
        <value>Intermittent Bleed Controllers</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>