unpackaged/main/default/objects/Asset/fields/Count_of_Level_Pneumatic_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Level_Pneumatic_Pilot__c</fullName>
    <label>Count of Level Pneumatic Pilot</label>
    <summarizedField>ESG_Data__c.Count_of_Level_Pneumatic_Pilot__c</summarizedField>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>