unpackaged/main/default/objects/Asset/fields/Count_of_Norriseal1001A__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Norriseal1001A__c</fullName>
    <label>Count of Norriseal1001A</label>
    <summaryFilterItems>
        <field>ESG_Data__c.Pneumatic_Controller_Make__c</field>
        <operation>equals</operation>
        <value>Throttling Norriseal1001A</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>