unpackaged/main/default/objects/Asset/fields/Count_of_Snap_Control_BelGas_P8100__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Snap_Control_BelGas_P8100__c</fullName>
    <label>Count of Snap Control BelGas P8100</label>
    <summaryFilterItems>
        <field>ESG_Data__c.Pneumatic_Controller_Make__c</field>
        <operation>equals</operation>
        <value>Snap Control BelGas P8100</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>