unpackaged/main/default/objects/Asset/fields/Count_of_Throttling_Pressure_Siemens_I_P__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Throttling_Pressure_Siemens_I_P__c</fullName>
    <label>Count of Throttling Pressure Siemens I/P</label>
    <summaryFilterItems>
        <field>ESG_Data__c.Pneumatic_Controller_Make__c</field>
        <operation>equals</operation>
        <value>Throttling Pressure Siemens I/P</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Data__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>