unpackaged/main/default/objects/Asset/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bee</fullName>
            </value>
            <value>
                <fullName>Dewitt</fullName>
            </value>
            <value>
                <fullName>Karnes</fullName>
            </value>
            <value>
                <fullName>Lavaca</fullName>
            </value>
            <value>
                <fullName>Live Oak</fullName>
            </value>
            <value>
                <fullName>McMullen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>