unpackaged/main/default/objects/Asset/fields/Edwards_Well__c.field-meta.xml
<CustomField>
    <fullName>Edwards_Well__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edwards Well</label>
    <type>Checkbox</type>
</CustomField>