unpackaged/main/default/objects/Asset/fields/Equip_ID__c.field-meta.xml
<CustomField>
    <fullName>Equip_ID__c</fullName>
    <label>Equip ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>