unpackaged/main/default/objects/Asset/fields/EUWI__c.field-meta.xml
<CustomField>
    <fullName>EUWI__c</fullName>
    <description>Ensign Unique Well Identifier</description>
    <externalId>true</externalId>
    <label>EUWI</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>