unpackaged/main/default/objects/Asset/fields/Flowtype__c.field-meta.xml
<CustomField>
    <fullName>Flowtype__c</fullName>
    <label>Flowtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flowing</fullName>
            </value>
            <value>
                <fullName>Gas Assist Plunger Lift</fullName>
            </value>
            <value>
                <fullName>Gas Lift</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Intermitter</fullName>
            </value>
            <value>
                <fullName>Plunger Lift</fullName>
            </value>
            <value>
                <fullName>Plunger Lift - Gas Assist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>