unpackaged/main/default/objects/Asset/fields/Foreman__c.field-meta.xml
<CustomField>
    <fullName>Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreman</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets Under Management</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>