unpackaged/main/default/objects/Asset/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eagleford</fullName>
            </value>
            <value>
                <fullName>Edwards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>