unpackaged/main/default/objects/Asset/fields/Formulated_Tier__c.field-meta.xml
<CustomField>
    <fullName>Formulated_Tier__c</fullName>
    <formula>IF( TEXT ( Parent.Asset_Type__c ) = &quot;Well&quot;, TEXT ( Parent.Tier__c ) , Parent.Id  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulated Tier</label>
    <type>Text</type>
</CustomField>