unpackaged/main/default/objects/Asset/fields/Has_calibration_maintenance_asset__c.field-meta.xml
<CustomField>
    <fullName>Has_calibration_maintenance_asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has calibration maintenance asset</label>
    <type>Checkbox</type>
</CustomField>