unpackaged/main/default/objects/Asset/fields/Has_proving_maintenance_asset__c.field-meta.xml
<CustomField>
    <fullName>Has_proving_maintenance_asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has proving maintenance asset</label>
    <type>Checkbox</type>
</CustomField>