unpackaged/main/default/objects/Asset/fields/Last_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Last_Calibration__c</fullName>
    <label>Last Calibration</label>
    <type>Date</type>
</CustomField>