unpackaged/main/default/objects/Asset/fields/Last_Gas_Sample__c.field-meta.xml
<CustomField>
    <fullName>Last_Gas_Sample__c</fullName>
    <label>Last Gas Sample</label>
    <type>Date</type>
</CustomField>