unpackaged/main/default/objects/Asset/fields/Last_Liquid_Sample__c.field-meta.xml
<CustomField>
    <fullName>Last_Liquid_Sample__c</fullName>
    <label>Last Liquid Sample</label>
    <type>Date</type>
</CustomField>