unpackaged/main/default/objects/Asset/fields/Lease_Holder__c.field-meta.xml
<CustomField>
    <fullName>Lease_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Check Box will indicate whether a well is a Lease Holder well.</description>
    <inlineHelpText>Do Not Modify Unless Authorized. This Check Box will indicate whether a well is a Lease Holder well. Do Not Modify unless Authorized.</inlineHelpText>
    <label>Lease Holder</label>
    <type>Checkbox</type>
</CustomField>