unpackaged/main/default/objects/Asset/fields/Lease_Operator__c.field-meta.xml
<CustomField>
    <fullName>Lease_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Operator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets Under Management</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>