unpackaged/main/default/objects/Asset/fields/Maintainable__c.field-meta.xml
<CustomField>
    <fullName>Maintainable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintainable</label>
    <type>Checkbox</type>
</CustomField>