unpackaged/main/default/objects/Asset/fields/Number_of_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_Orders__c</fullName>
    <label>Number of Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>