unpackaged/main/default/objects/Asset/fields/On_Off_Pressure_Solenoid__c.field-meta.xml
<CustomField>
    <fullName>On_Off_Pressure_Solenoid__c</fullName>
    <description>Count Of On/Off Pressure or Level- Solenoid</description>
    <inlineHelpText>Count Of On/Off Pressure or Level- Solenoid</inlineHelpText>
    <label>On/Off Pressure Solenoid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>