unpackaged/main/default/objects/Asset/fields/Operational_Flag__c.field-meta.xml
<CustomField>
    <fullName>Operational_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operational Flag</label>
    <type>Checkbox</type>
</CustomField>