unpackaged/main/default/objects/Asset/fields/P_ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>P_ID_Tag__c</fullName>
    <label>P&amp;ID Tag</label>
    <type>TextArea</type>
</CustomField>