unpackaged/main/default/objects/Asset/fields/Proving_Maintenance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Proving_Maintenance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proving Maintenance Plan</label>
    <referenceTo>MaintenancePlan</referenceTo>
    <relationshipLabel>Assets (Proving Maintenance Plan)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>