unpackaged/main/default/objects/Asset/fields/Proving_Maintenance_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Proving_Maintenance_Plan_Name__c</fullName>
    <formula>Proving_Maintenance_Plan__r.MaintenancePlanTitle</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proving Maintenance Plan Name</label>
    <type>Text</type>
</CustomField>