unpackaged/main/default/objects/Asset/fields/Size_Type_Setpoint__c.field-meta.xml
<CustomField>
    <fullName>Size_Type_Setpoint__c</fullName>
    <description>Size / Type / Setpoint for Metadata</description>
    <label>Size Type Setpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>