unpackaged/main/default/objects/Asset/fields/Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Superintendent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superintendent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets Under Management</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>