unpackaged/main/default/objects/Asset/fields/UWI__c.field-meta.xml
<CustomField>
    <fullName>UWI__c</fullName>
    <label>UWI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>