unpackaged/main/default/objects/Asset/fields/Zone_Priority__c.field-meta.xml
<CustomField>
    <fullName>Zone_Priority__c</fullName>
    <label>Zone Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>