unpackaged/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>Formation__c</columns>
    <columns>ASSET.NAME</columns>
    <columns>Asset_Number__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>In_Service_Date__c</columns>
    <columns>ASSET.PARENT</columns>
    <columns>Equip_ID__c</columns>
    <columns>EUWI__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Search_Type__c</field>
        <operation>equals</operation>
        <value>Flowline</value>
    </filters>
    <label>All Assets</label>
</ListView>