unpackaged/main/default/objects/Asset/listViews/Assets_added_in_2021.listView-meta.xml
<ListView>
    <fullName>Assets_added_in_2021</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.PARENT</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Service_Territory__c</columns>
    <columns>Asset_Search_Type__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Location__c</columns>
    <columns>Equip_ID__c</columns>
    <columns>EUWI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_YEAR</value>
    </filters>
    <label>Assets added in 2021</label>
</ListView>