unpackaged/main/default/objects/Asset/listViews/Compressor_List.listView-meta.xml
<ListView>
    <fullName>Compressor_List</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>Asset_Search_Type__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Asset_Number__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Equip_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Search_Type__c</field>
        <operation>equals</operation>
        <value>Engine/Compressor</value>
    </filters>
    <label>Compressor List</label>
</ListView>