unpackaged/main/default/objects/Asset/listViews/POD_List.listView-meta.xml
<ListView>
    <fullName>POD_List</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>POD</value>
    </filters>
    <label>POD List</label>
</ListView>