unpackaged/main/default/objects/Asset/listViews/Wells.listView-meta.xml
<ListView>
    <fullName>Wells</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Zone__c</columns>
    <columns>Asset_Number__c</columns>
    <columns>ASSET.PARENT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Well</value>
    </filters>
    <label>Wells</label>
</ListView>